fix(see_all) See all button - better visibility

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -94,6 +94,7 @@ h2:after {
 
 .all-button {
   margin: 60px auto;
+  margin-top: 20px;
   text-transform: uppercase;
   color: #fff;
   background: #993333;
@@ -101,11 +102,11 @@ h2:after {
   font-weight: bold;
   border-width: 0;
   border-radius: 3px;
-  height: 35px;
-  line-height: 37px;
+  height: 45px;
+  line-height: 45px;
   padding: 0;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
   cursor: pointer;
 }
 
